fix: trip seats api, trip detail api