@@ -19,6 +19,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import java.time.Instant;
+import java.time.LocalDate;
+import java.time.LocalTime;
 import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.List;
@@ -47,52 +49,33 @@ public class TripServiceImpl implements TripService {
     public List<TripFilterResponseDTO> filterTrips(TripFilterRequestDTO filter) {
         List<Trip> trips = tripRepository.findAll().stream()
                 .filter(trip -> filter.getRouteId() == null || trip.getRoute().getId().equals(filter.getRouteId()))
-                .filter(trip -> filter.getOperatorId() == null ||
-                        (trip.getBus() != null && trip.getBus().getOperator() != null &&
-                                trip.getBus().getOperator().getId().equals(filter.getOperatorId())))
-                .filter(trip -> filter.getMinPrice() == null
-                        || trip.getPricePerSeat().compareTo(filter.getMinPrice()) >= 0)
-                .filter(trip -> filter.getMaxPrice() == null
-                        || trip.getPricePerSeat().compareTo(filter.getMaxPrice()) <= 0)
-                .filter(trip -> filter.getSeatLayoutIds() == null ||
-                        (trip.getBus() != null
-                                && filter.getSeatLayoutIds().contains(trip.getBus().getSeatLayout().getId())))
-                .filter(trip -> {
-                    if (filter.getDepartureTime() == null)
-                        return true;
-                    return trip.getDepartureTime()
-                            .atZone(ZoneId.of("UTC"))
-                            .withZoneSameInstant(ZoneId.of("Asia/Ho_Chi_Minh"))
-                            .toLocalDate()
-                            .equals(filter.getDepartureTime());
-                })
-                .filter(trip -> {
-                    if (filter.getDurationFilter() == null || trip.getEstimatedArrivalTime() == null)
-                        return true;
-                    long durationHours = trip.getRoute().getDefaultDurationMinutes() / 60;
-                    return switch (filter.getDurationFilter()) {
-                        case "LESS_THAN_3" -> durationHours < 3;
-                        case "BETWEEN_3_AND_6" -> durationHours >= 3 && durationHours <= 6;
-                        case "BETWEEN_6_AND_12" -> durationHours >= 6 && durationHours <= 12;
-                        case "GREATER_THAN_12" -> durationHours > 12;
-                        default -> true;
-                    };
-                })
-                .filter(trip -> {
-                    if (filter.getAmenities() == null || trip.getBus() == null || trip.getBus().getAmenities() == null)
-                        return true;
-                    Map<String, Object> busAmenities = trip.getBus().getAmenities();
-                    for (Map.Entry<String, Object> entry : filter.getAmenities().entrySet()) {
-                        Object value = busAmenities.get(entry.getKey());
-                        if (value == null || !value.equals(entry.getValue())) {
-                            return false;
-                        }
-                    }
-                    return true;
-                })
+                .filter(trip -> filter.getBusOperatorIds() == null
+                        || List.of(filter.getBusOperatorIds()).contains(trip.getBus().getOperator().getId()))
+                .filter(trip -> filter.getDepartureDate() == null
+                        ? trip.getDepartureTime().atZone(ZoneId.of("Asia/Ho_Chi_Minh"))
+                                .toLocalDate().isEqual(LocalDate.parse(filter.getDepartureDate()))
+                        : trip.getDepartureTime().atZone(ZoneId.of("Asia/Ho_Chi_Minh")).toLocalDate()
+                                .isEqual(LocalDate.now(ZoneId.of("Asia/Ho_Chi_Minh"))))
+                .filter(trip -> filter.getUntilTime() == null
+                        ? trip.getDepartureTime().atZone(ZoneId.of("Asia/Ho_Chi_Minh"))
+                                .toLocalTime()
+                                .isAfter(LocalTime.parse(filter.getUntilTime()))
+                        : trip.getDepartureTime().atZone(ZoneId.of("Asia/Ho_Chi_Minh")).toLocalTime()
+                                .isAfter(LocalTime.now(ZoneId.of("Asia/Ho_Chi_Minh"))))
+                .filter(trip -> filter.getAvailableSeats() == null
+                        || trip.getBus().getTotalSeats() - trip.getBookings().stream()
+                                .filter(b -> b.getStatus() != BookingStatus.canceled_by_user
+                                        && b.getStatus() != BookingStatus.canceled_by_operator)
+                                .count() >= filter.getAvailableSeats())
+                .filter(trip -> filter.getBusModels() == null
+                        || List.of(filter.getBusModels()).contains(trip.getBus().getModel()))
+                .filter(trip -> filter.getAmenities() == null
+                        || trip.getBus().getAmenities().containsValue(filter.getAmenities()))
                 .filter(trip -> applyFilters(trip, filter))
-                .toList();
-
+                .collect(Collectors.toList());
+        if (trips.isEmpty()) {
+            return new ArrayList<>();
+        }
         return trips.stream()
                 .map(trip -> TripMapper.toDTO(trip, getAverageRating(trip.getId())))
                 .collect(Collectors.toList());
@@ -122,7 +105,7 @@ public class TripServiceImpl implements TripService {
                 trips.add(trip);
             }
         }
-       List<TripResponse> tripsResponses = trips.stream().limit(4).map(trip -> TripResponse
+        List<TripResponse> tripsResponses = trips.stream().limit(4).map(trip -> TripResponse
                 .builder()
                 .trip_id(trip.getId())
                 .operator_name(trip.getBus().getOperator().getName()).route(
